{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 10,
  "lineage": "885c3090-3282-190d-0979-9282faf00eff",
  "resources": [
    {
      "module": "module.infra",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:580951440591:vpc/vpc-49e3ed2f",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-c8fccaa3",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-e4374f82",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-49e3ed2f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-b03505c9",
            "owner_id": "580951440591",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:580951440591:security-group/sg-04853023f36a018ed",
            "description": "dev-instance",
            "egress": [],
            "id": "sg-04853023f36a018ed",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev20200123222022504500000001",
            "name_prefix": "dev",
            "owner_id": "580951440591",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-instance",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-49e3ed2f"
          }
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-3054743353",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04853023f36a018ed",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.infra.aws_security_group.instance"
          ]
        }
      ]
    }
  ]
}